# AgregatWGame

./: CMakeLists.txt
Game/: Game.cpp
assets/shaders/: default.fs  default.vs
src/: Engine.cpp  Engine.h  Geometries.h  Types.h
src/GraphicsManager/: GraphicsManager.cpp  GraphicsManager.h
src/InputManager/: InputManager.cpp  InputManager.h
src/ResourceManager/: ResourceManager.cpp  ResourceManager.h
src/SoundManager/: SoundManager.cpp  SoundManager.h
